@@ -5,6 +5,7 @@
 	- can detect network disconnect and acts appropriately (very quiet).
 	- fix bug with active number of connections.
 	- fix nice exit for panel on quit.
+	- present insecure or disconnect choice.
 
 15 Aug 2011: Wouter
 	- log with time in readable format (to logfile), detects strftime.
